# DevOps-Workshop

./: CMakeLists.txt  Makefile  README.md  box.cpp  box.h  main.cpp
include/: box.h
